CCI holiday fixes on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -445,11 +445,29 @@
    overflow-y: hidden;
  }
 
+
+ .holidayTextL {
+   text-align: right;
+   padding-right: 0.5rem;
+ }
+
+ .holidayTextR {
+   text-align: left;
+   padding-left: 0.5rem;
+ }
+
+
  /* On mobile displays, switch to one column */
  @media screen and (max-width: 700px) {
    .seasonGrid {
      grid-template-columns: repeat(1, 1fr);
      grid-template-rows: repeat(4, 1fr);
+   }
+
+   .holidayTextL,
+   .holidayTextR {
+     text-align: center;
+     padding: 0.75rem;
    }
  }
 
@@ -624,7 +642,7 @@
    /* max-height: 0vh; */
    /* margin: 5%; */
    align-items: center;
-   justify-items: flex-start;
+   justify-items: center;
    scroll-margin-top: 10vh;
    position: relative;
    right: 100vw;
